--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<meta name="Resource-type" content="Document" />
 
 
-	<link rel="stylesheet" type="text/css" href="/dist/fullpage.css" />
-	<link rel="stylesheet" type="text/css" href="examples.css" />
+	<link rel="stylesheet" type="text/css" href="https://anelie.netlify.app/dist/fullpage.css" />
+	<link rel="stylesheet" type="text/css" href="https://anelie.netlify.app/examples.css" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-	<script type="text/javascript" src="/dist/fullpage.js"></script>
+	<script type="text/javascript" src="https://anelie.netlify.app/dist/fullpage.js"></script>
 	
 	<script type="text/javascript">
         //using document ready...
@@ -169,6 +169,6 @@
 	</div>
 </div>
 
-<script type="text/javascript" src="examples.js"></script>
+<script type="text/javascript" src="https://anelie.netlify.app/examples.js"></script>
 </body>
 </html>
