--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<link rel="stylesheet" type="text/css" href="https://anelie.netlify.app/dist/fullpage.css" />
 	<link rel="stylesheet" type="text/css" href="https://anelie.netlify.app/examples.css" />
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 	<script type="text/javascript" src="https://anelie.netlify.app/dist/fullpage.js"></script>
 	
 	<script type="text/javascript">
