--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 			flex-direction: column;
 		}
 		div.experience-div p {
-  			color: #ffffff;
-			background: rgba(7, 18, 24, 0.5);
+  			color: #e5e8f1;
+			background: rgba(7, 18, 24, 0.8);
 		}
 		div.contact-div {
 			background: rgba(7, 18, 24, 0.8);
@@ -149,11 +149,12 @@
 	<div class="section" id="section3">
 	    <div class="slide">
 			<div class="intro">
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/Dx41Fii7hcY?mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 	    <div class="slide">
 			<div class="intro">
-				
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/5aUxajKCZ5s?mute=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
