--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
 	<style type="text/css">
 		#section0{
 			background-image: url(imgs/bg.jpg);
-			background-position: top;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
 		}
 		#section1{
 			background: -webkit-gradient(linear, top left, bottom left, from(#4bbfc3), to(#7baabe));
@@ -48,7 +51,10 @@
 		}
 		#section2{
 			background-image: url(imgs/bg.jpg);
-			background-position: bottom;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
 		}
 		#section3{
 			background: -webkit-gradient(linear, top left, bottom left, from(#4bbfc3), to(#7baabe));
@@ -57,7 +63,10 @@
 		}
 		#section4{
 			background-image: url(imgs/pic.jpg);
-			background-position: bottom;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
 		}
 		#section4 div{
 			vertical-align: bottom;
