Fixed backgrounf placement

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
+			background-position: center;
 			background-size: cover;
 		}
 		#section1{
@@ -55,6 +56,7 @@
 			-moz-background-size: cover;
 			-o-background-size: cover;
 			background-size: cover;
+			background-position: center;
 		}
 		#section3{
 			background: -webkit-gradient(linear, top left, bottom left, from(#4bbfc3), to(#7baabe));
@@ -67,6 +69,7 @@
 			-moz-background-size: cover;
 			-o-background-size: cover;
 			background-size: cover;
+			background-position: center;
 		}
 		#section4 div{
 			vertical-align: bottom;
