Update color palette

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 	<style type="text/css">
 		#section0{
-			background-image: url(imgs/bg.jpg);
+			background-image: url(imgs/bg.png);
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
@@ -46,50 +46,40 @@
 			background-size: cover;
 		}
 		#section1{
-			background: -webkit-gradient(linear, top left, bottom left, from(#4bbfc3), to(#7baabe));
-			background: -webkit-linear-gradient(#334c5a, #878787);
-			background: linear-gradient(#334c5a,#878787);
+			background-color: #F4EEDC !important;
 		}
 		#section2{
-			background-image: url(imgs/bg.jpg);
-			-webkit-background-size: cover;
-			-moz-background-size: cover;
-			-o-background-size: cover;
-			background-size: cover;
-			background-position: center;
+			
 		}
 		#section3{
 			background: -webkit-gradient(linear, top left, bottom left, from(#4bbfc3), to(#7baabe));
-			background: -webkit-linear-gradient(#878787, #334c5a);
-			background: linear-gradient(#878787,#334c5a);
+			background: -webkit-linear-gradient(#C7CED6, #7E7C7F);
+			background: linear-gradient(#C7CED6, #7E7C7F);
 		}
 		#section4{
-			background-image: url(imgs/pic.jpg);
-			-webkit-background-size: cover;
-			-moz-background-size: cover;
-			-o-background-size: cover;
-			background-size: cover;
-			background-position: center;
+			background-color: #C7CED6 !important;
 		}
 		#section4 div{
 			vertical-align: bottom;
 		}
 		.section{
-			background-color: #878787 !important;
+			background-color: #7E7C7F !important;
 		}
 		.title{
-			color: #f2f3f7;
+			color: #334c5a;
+			font-size: 2.5em;
 		}		
 		.content{
-			color: #071218;
+			color: #7E7C7F;
+			font-size: 1.5em;
 		}
 		.experience-div{
 			display: flex;
 			flex-direction: column;
 		}
 		div.experience-div p {
-  			color: #e5e8f1;
-			background: rgba(7, 18, 24, 0.8);
+  			color: #334c5a;
+			background: rgb(244, 238, 220, 0.8);
 		}
 		div.contact-div {
 			background: rgba(7, 18, 24, 0.8);
@@ -122,8 +112,8 @@
 <body>
 <div id="fullpage">
 	<div class="section" id="section0">
-		<h1>Anelie Decomotan</h1>
-		<p class="content">9 Years Fullstack Developer</p>
+		<img src="imgs/title.svg">
+		<p class="content">Fullstack Developer</p>
 		<p class="content">Angular | Java | Mobile Development</p>
 	</div>
 	<div class="section" id="section1">
@@ -174,8 +164,8 @@
 		<div class="intro">
 			<div class="contact-div">
 				<p class="content">
-					AGDecomotan@yahoo.com<br>
- 					https://github.com/agdecomotan<br>
+					<!-- AGDecomotan@yahoo.com<br>
+ 					https://github.com/agdecomotan<br> -->
 				</p>
 			</div>
 		</div>
