--- a/index.html
+++ b/index.html
@@ -136,11 +136,12 @@
 			<br/>
 			<br/>
 			• HTML • PHP •<br/>
-			• Windows Presentation Foundation (WPF) • <br/>
 			• ASP.NET •
 			<br/>
 			<br/>
-			• Angular JS • Mobile Development (Expo) •</p>
+			• Mobile Development (Expo) •<br/>
+			• Angular JS •<br/>
+			• Node JS •</p>
 		</div>
 	</div>
 	<div class="section" id="section2">
