Update font size

--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
 		}
 		.title{
 			color: #334c5a;
-			font-size: 2.5em;
+			font-size: 3em !important;
+			padding-bottom: 10px;
 		}		
 		.content{
 			color: #7E7C7F;
-			font-size: 1.5em;
+			font-size: 2em !important;
 		}
 		.experience-div{
 			display: flex;
@@ -123,7 +124,7 @@
 <body>
 <div id="fullpage">
 	<div class="section" id="section0">
-		<img src="imgs/title.svg">
+		<img src="imgs/title.svg" width="700" height="200">
 		<p class="content">Fullstack Developer</p>
 		<p class="content">Angular | Java | Mobile Development</p>
 	</div>
